--- a/style.css
+++ b/style.css
@@ -1,13 +1,23 @@
+body {
+    background-color: yellow;
+}
+
 img.recipe-img {
     width: 800;
     height: auto;
     border: 2px solid #000;
+    margin-top: 20px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     background-color: black;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    padding: 8px 5px;
+    margin: 0;
 }
 
 p, 
@@ -18,4 +28,27 @@ p,
 
 li {
     font-size: 18px;
+}
+
+a {
+    color: black;
+    font-weight: bold;
+}
+
+div {
+    background-color: white;
+    padding: 8px;
+    margin: 10px 0;
+}
+
+div.description p {
+    padding-left: 10px;
+}
+.byline {
+    font-size: 14px;
+}
+
+div li {
+    margin-top: 0px;
+    margin-bottom: 8px;
 }
